--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Tazwan Talha</title>
+  <meta content="Tazwan Talha is an Independent filmmaker based in Dhaka, Bangladesh" name="description">
+  <meta content="Tazwan Talha, Bangladesh, Filmmaker, Independent" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -67,7 +67,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link  scrollto" href="#journal">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <!--li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -83,7 +83,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li-->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -474,7 +474,7 @@
       </div>
 
 		<script>
-			var postsPerPage = 3; // Number of posts to load per click
+			var postsPerPage = 6; // Number of posts to load per click
 			var loadedPosts = 0; // Counter to keep track of loaded posts
       
      
@@ -551,10 +551,10 @@
                 <h2 class="mb-30">GET IN TOUCH</h2>
 
                 <ul class="contact-details">
-                  <li><span>23 Main, Street</span></li>
-                  <li><span>New York, United States</span></li>
-                  <li><span>+88 01912704287</span></li>
-                  <li><span>example@example.com</span></li>
+                  <li><span>Mirpur - 13,</span></li>
+                  <li><span>Dhaka, Bangladesh</span></li>
+                  <li><span>+88 018 4637 4092</span></li>
+                  <li><span>tazwantalha000@gmail.com</span></li>
                 </ul>
 
               </div>
@@ -617,7 +617,7 @@
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
+      <p>&copy; Copyrights Tazwan Rahman Abu Talha. All rights reserved.</p>
 
       <div class="credits">
         <!--
@@ -626,7 +626,9 @@
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
       -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <span style="display: none;">Theme from <a href="https://bootstrapmade.com/">BootstrapMade</a></span>
+         Developed with <i title="love" style="transform: rotate(-22deg); vertical-align: middle; height: 13px;" class="bi bi-heart-fill"></i> by <a target="_blank" href="https://tawsiftorabi.github.io">Tawsif Torabi</a>
+          | <a target="_blank" href="https://www.fiverr.com/s/W8Klq7">Build A Portfolio</a>
       </div>
 
     </div>
