--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Tazwan Talha</title>
   <meta content="Tazwan Talha is an Independent filmmaker based in Dhaka, Bangladesh" name="description">
   <meta content="Tazwan Talha, Bangladesh, Filmmaker, Independent" name="keywords">
+  <meta content="assets/img/me.jpg" name="og:image">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
