--- a/index.html
+++ b/index.html
@@ -423,6 +423,118 @@
 
     </div><!-- End Portfolio Section -->
 
+
+
+<!-- ======= My Clients Section ======= -->
+    <div id="clients" class="paddsection">
+
+      <div class="container">
+        <div class="section-title text-center">
+          <h2>My Clients</h2>
+        </div>
+      </div>
+
+      <div class="container">
+		<div class="services-slider swiper" data-aos="fade-up" data-aos-delay="100">
+		  <div class="swiper-wrapper">
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/scout.jpg" alt="Scout Open Rover Logo"/>
+				<span>Open Rover Scout</span>
+				<p class="separator">Open Rover Initiation Camp 2022</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/rek.png" alt="REK Labib Agency Logo"/>
+				<span>REK Labib Agency</span>
+				<p class="separator">Content Creator & Video Editor</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/spsc.jpg" alt="Shaheed Police Smrity College Logo"/>
+				<span>Shaheed Police Smrity College</span>
+				<p class="separator">Created several documentaries</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/bgn.png" alt="BYLC Graduate Network Logo"/>
+				<span>BYLC Graduate Network</span>
+				<p class="separator">Created documentaries</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/sprout.png" alt="Sprout Bangladesh Logo"/>
+				<span>SPROUT Bangladesh</span>
+				<p class="separator">Shot Videos for SPROUT Learning Android App</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/tmcorp.jpg" alt="TM Corporation Logo"/>
+				<span>TM Corporation</span>
+				<p class="separator">Motorcycle Accessories Content Creator</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/dv.jpg" alt="Dhaka Valley Fashion Logo"/>
+				<span>Dhaka Valley</span>
+				<p class="separator">Made Advertisement</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/nano.jpg" alt="NANO Backpack Logo"/>
+				<span>NANO</span>
+				<p class="separator">Made Advertisement</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/ajwah.jpg" alt="AJWAH Global Logo"/>
+				<span>AJWAH Global</span>
+				<p class="separator">Made Advertisement</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/uiutfc.jpg" alt="UIUTFC Logo"/>
+				<span>UIU Theatre & Film Club</span>
+				<p class="separator">Made Advertisement/ShortFilms/OVC</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+			<div class="swiper-slide">
+			  <div class="services-block">
+				<img style="height: 100px" src="assets/img/company/uiurc.jpg" alt="UIU Robotics Logo"/>
+				<span>UIU Robotics</span>
+				<p class="separator">Made Advertisement for Innobotics 2020</p>
+			  </div>
+			</div><!-- End testimonial item -->
+
+
+		  </div>
+		  <div class="swiper-pagination"></div>
+		</div>
+      </div>
+
+    </div><!-- End My Clients Section -->
+
+
     <!-- ======= Journal Section ======= -->
     <div id="journal" class="text-left paddsection">
 
