--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1><span class="typed" data-typed-items="I'm Tazwan Talha, You found me?, Let's Create!"></span></h1>
+        <h1><span class="typed" data-typed-items="I'm Abu Talha (Tazwan), You found me?, Let's Create!"></span></h1>
         <p>Independent Filmmaker, Graphics Designer, Photographer</p>
 
         <ul class="list-unstyled list-social">
